--- a/Javascript-Drum-kit/index.html
+++ b/Javascript-Drum-kit/index.html
@@ -7,6 +7,37 @@
     <link href="/dist/output.css" rel="stylesheet">
 </head>
 <body>
-    <h1 class="font-light size-10"> Hello </h1>
+    <div class="bg-gradient-to-r from-cyan-500 to-blue-500 w-screen h-screen">
+        <div class="flex container w-screen h-screen justify-center items-center space-x-20">
+            <div class="flex flex-col border-double border-4 border-black items-center justify-center p-4 rounded-md">
+                <div class="text-2xl">A</div>
+                <div class="font-bold text-yellow-300"">Clap</div>
+            </div>
+            <div class="flex flex-col border-double border-4 border-black items-center justify-center p-4 rounded-md">
+                <div class="text-2xl">A</div>
+                <div class="font-bold text-yellow-300">Clap</div>
+            </div>
+            <div class="flex flex-col border-double border-4 border-black items-center justify-center p-4 rounded-md">
+                <div class="text-2xl">A</div>
+                <div class="font-bold text-yellow-300"">Clap</div>
+            </div>
+            <div class="flex flex-col border-double border-4 border-black items-center justify-center p-4 rounded-md">
+                <div class="text-2xl">A</div>
+                <div class="font-bold text-yellow-300"">Clap</div>
+            </div>
+            <div class="flex flex-col border-double border-4 border-black items-center justify-center p-4 rounded-md">
+                <div class="text-2xl">A</div>
+                <div class="font-bold text-yellow-300"">Clap</div>
+            </div>
+            <div class="flex flex-col border-double border-4 border-black items-center justify-center p-4 rounded-md">
+                <div class="text-2xl">A</div>
+                <div class="font-bold text-yellow-300"">Clap</div>
+            </div>
+            <div class="flex flex-col border-double border-4 border-black items-center justify-center p-4 rounded-md">
+                <div class="text-2xl">A</div>
+                <div class="font-bold text-yellow-300"">Clap</div>
+            </div>         
+        </div>
+    </div>
 </body>
 </html>
