re-adjust the boxes

--- a/Javascript-Drum-kit/index.html
+++ b/Javascript-Drum-kit/index.html
@@ -7,8 +7,8 @@
     <link href="/dist/output.css" rel="stylesheet">
 </head>
 <body>
-    <div class="bg-gradient-to-r from-cyan-500 to-blue-500 w-screen h-screen">
-        <div class="flex container w-screen h-screen justify-center items-center space-x-20">
+    <div class="flex bg-gradient-to-r from-cyan-500 to-blue-500 w-screen h-screen">
+        <div class="flex container justify-center items-center space-x-10">
             <div class="flex flex-col border-double border-4 border-black items-center justify-center p-4 rounded-md">
                 <div class="text-2xl">A</div>
                 <div class="font-bold text-yellow-300"">Clap</div>
@@ -35,8 +35,16 @@
             </div>
             <div class="flex flex-col border-double border-4 border-black items-center justify-center p-4 rounded-md">
                 <div class="text-2xl">A</div>
-                <div class="font-bold text-yellow-300"">Clap</div>
-            </div>         
+                <div class="font-bold text-yellow-300"">Clap</div>             
+            </div>
+            <div class="flex flex-col border-double border-4 border-black items-center justify-center p-4 rounded-md">
+                <div class="text-2xl">A</div>
+                <div class="font-bold text-yellow-300"">Clap</div>             
+            </div>   
+            <div class="flex flex-col border-double border-4 border-black items-center justify-center p-4 rounded-md">
+                <div class="text-2xl">A</div>
+                <div class="font-bold text-yellow-300"">Clap</div>             
+            </div>           
         </div>
     </div>
 </body>
