Java script Drum Project Complet , with a bad design

--- a/Javascript-Drum-kit/index.html
+++ b/Javascript-Drum-kit/index.html
@@ -9,43 +9,53 @@
 <body>
     <div class="flex bg-gradient-to-r from-cyan-500 to-blue-500 w-screen h-screen">
         <div class="flex container justify-center items-center space-x-10">
-            <div class="flex flex-col border-double border-4 border-black items-center justify-center p-4 rounded-md">
+            <div data-key="65" class="flex flex-col border-collapse border-4 border-black items-center justify-center p-4 rounded-md">
                 <div class="text-2xl">A</div>
                 <div class="font-bold text-yellow-300"">Clap</div>
             </div>
-            <div class="flex flex-col border-double border-4 border-black items-center justify-center p-4 rounded-md">
-                <div class="text-2xl">A</div>
-                <div class="font-bold text-yellow-300">Clap</div>
+            <div data-key="83" class="flex flex-col border-collapse border-4 border-black items-center justify-center p-4 rounded-md">
+                <div class="text-2xl">S</div>
+                <div class="font-bold text-yellow-300">HiHAT</div>
             </div>
-            <div class="flex flex-col border-double border-4 border-black items-center justify-center p-4 rounded-md">
-                <div class="text-2xl">A</div>
-                <div class="font-bold text-yellow-300"">Clap</div>
+            <div data-key="68" class="flex flex-col border-collapse border-4 border-black items-center justify-center p-4 rounded-md">
+                <div class="text-2xl">D</div>
+                <div class="font-bold text-yellow-300"">KICK</div>
             </div>
-            <div class="flex flex-col border-double border-4 border-black items-center justify-center p-4 rounded-md">
-                <div class="text-2xl">A</div>
-                <div class="font-bold text-yellow-300"">Clap</div>
+            <div data-key="70" class="flex flex-col border-collapse border-4 border-black items-center justify-center p-4 rounded-md">
+                <div class="text-2xl">F</div>
+                <div class="font-bold text-yellow-300"">OPENHAT</div>
             </div>
-            <div class="flex flex-col border-double border-4 border-black items-center justify-center p-4 rounded-md">
-                <div class="text-2xl">A</div>
-                <div class="font-bold text-yellow-300"">Clap</div>
+            <div data-key="71" class="flex flex-col border-collapse border-4 border-black items-center justify-center p-4 rounded-md">
+                <div class="text-2xl">G</div>
+                <div class="font-bold text-yellow-300"">BOOM</div>
             </div>
-            <div class="flex flex-col border-double border-4 border-black items-center justify-center p-4 rounded-md">
-                <div class="text-2xl">A</div>
-                <div class="font-bold text-yellow-300"">Clap</div>
+            <div data-key="72" class="flex flex-col border-collapse border-4 border-black items-center justify-center p-4 rounded-md">
+                <div class="text-2xl">H</div>
+                <div class="font-bold text-yellow-300"">RIDE</div>
             </div>
-            <div class="flex flex-col border-double border-4 border-black items-center justify-center p-4 rounded-md">
-                <div class="text-2xl">A</div>
-                <div class="font-bold text-yellow-300"">Clap</div>             
+            <div data-key="74" class="flex flex-col border-collapse border-4 border-black items-center justify-center p-4 rounded-md">
+                <div class="text-2xl">J</div>
+                <div class="font-bold text-yellow-300"">SNARE</div>             
             </div>
-            <div class="flex flex-col border-double border-4 border-black items-center justify-center p-4 rounded-md">
-                <div class="text-2xl">A</div>
-                <div class="font-bold text-yellow-300"">Clap</div>             
+            <div data-key="75" class="flex flex-col border-collapse border-4 border-black items-center justify-center p-4 rounded-md">
+                <div class="text-2xl">K</div>
+                <div class="font-bold text-yellow-300"">TOM</div>             
             </div>   
-            <div class="flex flex-col border-double border-4 border-black items-center justify-center p-4 rounded-md">
-                <div class="text-2xl">A</div>
-                <div class="font-bold text-yellow-300"">Clap</div>             
+            <div data-key="76" class="flex flex-col border-collapse border-4 border-black items-center justify-center p-4 rounded-md">
+                <div class="text-2xl">L</div>
+                <div class="font-bold text-yellow-300"">TINK</div>             
             </div>           
         </div>
     </div>
+    <audio data-key="65" src="sounds/clap.wav"></audio>
+    <audio data-key="83" src="sounds/hihat.wav"></audio>
+    <audio data-key="68" src="sounds/kick.wav"></audio>
+    <audio data-key="70" src="sounds/openhat.wav"></audio>
+    <audio data-key="71" src="sounds/boom.wav"></audio>
+    <audio data-key="72" src="sounds/ride.wav"></audio>
+    <audio data-key="74" src="sounds/snare.wav"></audio>
+    <audio data-key="75" src="sounds/tom.wav"></audio>
+    <audio data-key="76" src="sounds/tink.wav"></audio>
+    <script src="js/app.js"></script>
 </body>
 </html>
