--- a/Clock/index.html
+++ b/Clock/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/dist/output.css" rel="stylesheet">
     <title>Document</title>
 </head>
-<body>
-<div class="bg-blue-500 h-10">
-    <p>Hello</p>
-</div>
-</body>
-</html>
+
+<body class="flex bg-gradient-to-r from-indigo-500 to-blue-500 justify-center items-center h-screen">
+        <div class="container flex justify-center">
+            <div class="w-60 h-60 rounded-full border-4 border-black bg-inherit"></div>
+        </div>
+    </body>
+
+    </html>
