--- a/Clock/index.html
+++ b/Clock/index.html
@@ -12,6 +12,7 @@
         <div class="container flex justify-center">
             <div class="w-60 h-60 rounded-full border-4 border-black bg-inherit"></div>
         </div>
+        <script src="/js/app.js"></script>
     </body>
 
     </html>
